--- a/StoreFront3.0.UI.MVC/Web.config
+++ b/StoreFront3.0.UI.MVC/Web.config
@@ -25,11 +25,20 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <!--<add key="owin:AppStartup" value="StoreFront3._0.UI.MVC.Startup,StoreFront3._0.UI.MVC"/>-->  
+    <!-- We're hopeing the above works for now and seeing where to go from there
+    it did not-->
   </appSettings>
   <system.web>
     <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
+
+    <!--<customErrors mode="RemoteOnly">
+      <error statusCode="404" redirect="~/CustomErrors/NotFound"/>
+    </customErrors>-->
+    <!-- TODO address the above in some way-->
+    
   </system.web>
   <system.webServer>
     <modules>
