Commit before I break it, AJAX delete fully functional and tested. Tired Commit

--- a/StoreFront.DATA.EF/App.Config
+++ b/StoreFront.DATA.EF/App.Config
@@ -6,6 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="DCAccessoriesEntities" connectionString="metadata=res://*/StoreFrontModel.csdl|res://*/StoreFrontModel.ssdl|res://*/StoreFrontModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=DCAccessories;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DCAccessoriesEntities1" connectionString="metadata=res://*/StoreFrontModels.csdl|res://*/StoreFrontModels.ssdl|res://*/StoreFrontModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=DCAccessories;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
