--- a/StoreFront3.0.UI.MVC/Web.config
+++ b/StoreFront3.0.UI.MVC/Web.config
@@ -14,6 +14,7 @@
 
     <add name="DCAccessoriesEntities" connectionString="metadata=res://*/StoreFrontModel.csdl|res://*/StoreFrontModel.ssdl|res://*/StoreFrontModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=DCAccessories;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
+    <add name="DCAccessoriesEntities1" connectionString="metadata=res://*/StoreFrontModels.csdl|res://*/StoreFrontModels.ssdl|res://*/StoreFrontModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=DCAccessories;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-StoreFront3.0.UI.MVC-20220328060900.mdf;Initial Catalog=aspnet-StoreFront3.0.UI.MVC-20220328060900;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
 
