Final commit of the night.

--- a/StoreFront3.0.UI.MVC/StoreFront3.0.UI.MVC.csproj
+++ b/StoreFront3.0.UI.MVC/StoreFront3.0.UI.MVC.csproj
@@ -244,6 +244,26 @@
     <Content Include="Content\images\RumblePack2.jpg" />
     <Content Include="Content\images\StarFire_LightBlaster.jpg" />
     <Content Include="Content\images\SuperConverter.jpg" />
+    <Content Include="Content\images\Test\Alloy.png" />
+    <Content Include="Content\images\Test\AstroPad.jpg" />
+    <Content Include="Content\images\Test\Dreamcast Arcade Stick.jpg" />
+    <Content Include="Content\images\Test\Dreamcast Controller.png" />
+    <Content Include="Content\images\Test\Dreamcast Twin Stick.png" />
+    <Content Include="Content\images\Test\Dreameye.png" />
+    <Content Include="Content\images\Test\Fighting Stick.jpg" />
+    <Content Include="Content\images\Test\Fishing Controller.jpg" />
+    <Content Include="Content\images\Test\Internet Starter Kit .jpg" />
+    <Content Include="Content\images\Test\Jump Pack.jpg" />
+    <Content Include="Content\images\Test\Panthar DC.png" />
+    <Content Include="Content\images\Test\PS3,PS4 to Dreamcast Super Converter.jpg" />
+    <Content Include="Content\images\Test\REAL Arcade Stick.jpg" />
+    <Content Include="Content\images\Test\Rumble Fighting Stick.jpg" />
+    <Content Include="Content\images\Test\StarFire LightBlaster.jpg" />
+    <Content Include="Content\images\Test\Tornado.png" />
+    <Content Include="Content\images\Test\Total Control Plus.jpg" />
+    <Content Include="Content\images\Test\V3FX Racing Wheel.png" />
+    <Content Include="Content\images\Test\Visual Memory Unit %28VMU%29.png" />
+    <Content Include="Content\images\Test\Wingman Converter SD.png" />
     <Content Include="Content\images\Tornado.png" />
     <Content Include="Content\images\Tornado2.png" />
     <Content Include="Content\images\TotalControlPlus.jpg" />
