--- a/StoreFront3.0.UI.MVC/Configs/AppSecretKeys.config
+++ b/StoreFront3.0.UI.MVC/Configs/AppSecretKeys.config
@@ -1,6 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8" ?> 
-<!-- TODO come in here to fill information (emailclient, emailuser, emailpass, emailto (probably not that last one as it will be displayed on the main contact page anyway.-->
-
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <appSettings>
-  
+  <!-- Replace yourdomain.yourextension below with your actual domain & extension -->
+  <!-- You can find this value on SmarterASP.net - Copy/Paste recommended to avoid typos -->
+  <add key="EmailClient" value="mail.alexklee.net" />
+  <!-- Replace yourdomain.yourextension below with the email user you created -->
+  <!-- You can find this value on SmarterASP.net - Copy/Paste recommended to avoid typos -->
+  <add key="EmailUser" value="administrator@alexklee.net" />
+  <!-- Replace P@ssw0rd below with your email user's password (this should be the same for the one we made in class) -->
+  <!-- You can find or reset this value on SmarterASP.net - Copy/Paste recommended to avoid typos -->
+  <add key="EmailPass" value="P@ssw0rd"/>
+  <!-- Replace yourpersonalemail@youremailprovider.extension below with your personal email-->
+  <add key="EmailTo" value="kleealex34@outlook.com"/>
 </appSettings>
